fixed some minor css. fixed name not showing in list selector

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -35,6 +35,10 @@
   margin-bottom: 75px;
 }
 
+.no-list {
+  padding-left: 16px;
+}
+
 .add-button {
   position: fixed;
   bottom: 10px;
